# lyon-transit-viewer

./: .env.example  .gitignore  DEPLOY_VPS.md  README.md  SETUP.md
backend/: Dockerfile
backend/src/: index.ts.tmp
backend/src/middleware/: errorHandler.ts
backend/src/routes/: admin.ts  api.old.ts  api.ts
backend/src/services/: ingestion.service.old.ts
backend/src/types/: index.ts
db/: init.sql
deploy/systemd/: lyon-frontend.service.template  lyon-ingest.service.template  lyon-spacetime.service.template
docs/: CONFIG_REFERENCE.md  OPERATIONS.md
docs/superpowers/specs/: 2026-07-11-responsive-menus-unification-design.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/scripts/: ingest_daemon.mjs  set_config.mjs
frontend/src/: App.old.tsx  App.tsx  index.css  index.tsx  serviceWorkerRegistration.ts  spacetimedb-shim.ts  theme.ts  types.ts  vite-env.d.ts
frontend/src/components/: AdminDashboard.tsx  AlertsPanel.tsx  DashboardStats.tsx  EnhancedSidebar.old.tsx  EnhancedSidebar.tsx  Header.tsx  (+12 more)
legacy/node-postgres/: README.md  alter_table.sql  docker-compose.yml  package-lock.json
scripts/: deploy_vps.sh  ingest_daemon.sh  install_systemd_units.sh  rollback_vps.sh  set_config.sh
spacetimedb/: spacetime.local.json
spacetimedb/spacetimedb/: Cargo.toml
spacetimedb/spacetimedb/src/: http_utils.rs  lib.rs  models.rs  procedures.rs  serde_types.rs
spacetimedb/spacetimedb/src/ingestion/: gtfs.rs  mobility.rs  mod.rs  realtime.rs  static_data.rs
(+123 files in other folders)
